# korrektor-wasm

./: .gitignore  Cargo.toml  README.md  client.ts  deno.jsonc  error.ts  example.ts  justfile  mod.ts  readme.md  types.ts
.github/workflows/: deno.yml  rust.yml
src/: client.rs  lib.rs  types.rs
tests/: private_test.ts  tools_test.ts  utils_test.ts
