[package]
name = "korrektor-wasm"
description = "SDK to Korrektor API via WebAssembly"
repository = "https://github.com/uzinfocom-org/korrektor-wasm"
version = "0.1.0"
authors = ["Yuri Katsuki <yuri@katsuki.moe>"]
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.14"
serde = { version = "1.0.101", features = ["derive"] }
wasm-bindgen-futures = "0.4.1"
serde_json = "1.0.41"
wasm-bindgen = "0.2.51"
serde-wasm-bindgen = "0.5.0"
